
2020-12-21  Simon Sobisch <simonsobisch@gnu.org>

	* field.c, pplex.l, tree.c, typeck.c: fixed warning option querying enum
	  instead of actual value via cb_warn_opt_val
	
2020-12-18  Simon Sobisch <simonsobisch@gnu.org>

	FR #397: add support for JSON GENERATE anonymous JSON objects
	* parser.y: split _name_of to _xml_name_of and _json_name_of, the later
	  one with additional possible NAME ... IS OMITTED and
	  without GENERATE XML checks
	* typeck.c (is_subordinate_to_fields): cob_field based
	  variant of is_subordinate_to
	* typeck.c (syntax_check_ml_gen_name_list): additional parameter is_xml
	  to distinguish between XML and JSON generation (messages, possible rules)
	* typeck.c (syntax_check_ml_gen_name_list): check of NAME ... IS OMITTED
	
2020-12-17  Simon Sobisch <simonsobisch@gnu.org>

	bug #571 revised:
	* typeck.c (create_implicit_assign_dynamic_var): add ASSIGN name as
	  implicit VALUE clause for the implicit variable providing a
	  reasonable (expected) default if not manually set
	* warning.def (implicit-define): changed from "always on" to "only upon
	  request" as the unexpected "inconsistent empty filename" was fixed

2020-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c [!COB_ALLOW_UNALIGNED]: fixed unused variable warning
	* parser.y (evaluate_body): don't call cb_emit_evaluate if contained
	  statements are skipped (not active USE FOR DEBUGGING), fixing bug #693
	* parser.y: dropped "main_statement" and deactivated unnecessary calls to
	  begin_implicit_statement

2020-12-13  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (propagate_table): reduced codegen for INITIALIZE to a single
	  variant for tables with compile-time known size, removing extra logic

2020-12-11  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_initialize_compound, propagate_table):
	  fix INITIALIZE logic to correctly handle subscripts (bug #694)
	* parser.y: add check for valid ->pic pointer

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>
